--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
-title: Oinam’s Blog
-description: >- # this means to ignore newlines until "baseurl:"
-  Taking care of kids and women. Save the planet, curb climate change. Progress exponentially.
+title: "Oinam’s Blog"
+description: "Taking care of kids and women. Save the planet, curb climate change. Progress exponentially."
 
 baseurl: ""
 url: "https://blog.oinam.com"
